<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="@color/gray"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="5dp"
            android:background="@color/primaryText"
            android:orientation="vertical">

            <TextView
                android:id="@+id/show_shift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="Next Shift" />

            <TextView
                android:id="@+id/next_shift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textColor="@color/secondaryText"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/shift_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textSize="20dp" />
        </LinearLayout>

        <fragment
            android:id="@+id/my_map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:paddingLeft="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/clock" />

            <TextView
                android:id="@+id/clockin"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="Clock In"

                android:textColor="@color/primaryText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="5dp"
            android:background="@color/primaryText"
            android:orientation="vertical"
            android:paddingLeft="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="Also working"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circle1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/doctor" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circle2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/p1" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circle3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/p2" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circle4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/p3" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primaryText">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="#00E676"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/primaryText"
                android:textSize="30dp"
                android:textStyle="bold" />
            <TextView
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                android:text="Requests Awaiting Actoin"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_emial"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primaryText">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="#455A64"
                android:gravity="center"
                android:text="2"
                android:textColor="@color/primaryText"
                android:textSize="30dp"
                android:textStyle="bold" />
            <TextView
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                android:text="Now Send Messages"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>


</FrameLayout>