<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/doctor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_height="40dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@android:drawable/stat_sys_speakerphone"
            android:backgroundTint="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="25dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <View
                style="@style/Divider"
                android:layout_width="140dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@android:color/darker_gray" />


        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:orientation="horizontal"
        android:layout_height="55dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/user"
            android:backgroundTint="@color/colorPrimary" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:hint="Name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:orientation="horizontal"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@android:drawable/sym_action_email"
            android:backgroundTint="@color/colorPrimary" />


        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>


    <info.hoang8f.widget.FButton
        android:id="@+id/save_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/colorPrimaryLight"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:text="Save"
        app:buttonColor="@color/colorPrimary"
        app:cornerRadius="10dp"
        app:shadowEnabled="true" />


</LinearLayout>